[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/joyeux_dialog_system/src/editor/Graph.gd" type="Script" id=1]
[ext_resource path="res://addons/joyeux_dialog_system/src/editor/FileDialog.gd" type="Script" id=2]

[node name="VBC" type="VBoxContainer"]
offset_left = 7.0
offset_top = 7.0
offset_right = 1017.0
offset_bottom = 593.0

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_right = 1010.0
offset_bottom = 38.0

[node name="HBC" type="HBoxContainer" parent="PanelContainer"]
offset_left = 7.0
offset_top = 7.0
offset_right = 1003.0
offset_bottom = 31.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="File" type="MenuButton" parent="PanelContainer/HBC"]
offset_right = 35.0
offset_bottom = 24.0
focus_mode = 2
text = "File"
items = [ "Open", null, 0, false, false, 0, 0, null, "", false, "Save", null, 0, false, false, 1, 0, null, "", false ]

[node name="VS" type="VSeparator" parent="PanelContainer/HBC"]
offset_left = 39.0
offset_right = 43.0
offset_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBC" type="HBoxContainer" parent="PanelContainer/HBC"]
offset_left = 47.0
offset_right = 996.0
offset_bottom = 24.0
size_flags_horizontal = 3
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelContainer/HBC/HBC"]
offset_top = 5.0
offset_right = 106.0
offset_bottom = 19.0
text = "Character Name:"

[node name="CharName" type="LineEdit" parent="PanelContainer/HBC/HBC"]
offset_left = 110.0
offset_right = 949.0
offset_bottom = 24.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Graph" type="GraphEdit" parent="."]
offset_top = 42.0
offset_right = 1010.0
offset_bottom = 586.0
size_flags_horizontal = 3
size_flags_vertical = 3
right_disconnects = true
script = ExtResource( 1 )

[node name="PopupMenu" type="PopupMenu" parent="Graph"]
offset_right = 84.0
offset_bottom = 88.0
items = [ "Dialog", null, 0, false, false, 0, 0, null, "", false, "", null, 0, false, false, 1, 0, null, "", true, "Choice", null, 0, false, false, 2, 0, null, "", false, "Text Input", null, 0, false, false, 3, 0, null, "", false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="GraphNode" parent="Graph"]
offset_left = 90.0
offset_top = 70.0
offset_right = 230.0
offset_bottom = 150.0
mouse_filter = 1
title = "Dialog Start"
offset = Vector2( 90, 70 )
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = true
slot/0/right_type = 1
slot/0/right_color = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Graph/Start"]
offset_left = 16.0
offset_top = 24.0
offset_right = 124.0
offset_bottom = 74.0

[node name="Control2" type="Control" parent="Graph/Start/VBoxContainer"]
offset_right = 108.0
offset_bottom = 14.0
custom_minimum_size = Vector2( 0, 14 )

[node name="Label" type="Label" parent="Graph/Start/VBoxContainer"]
offset_top = 18.0
offset_right = 108.0
offset_bottom = 32.0
text = "Next Dialog"
align = 2

[node name="Control" type="Control" parent="Graph/Start/VBoxContainer"]
offset_top = 36.0
offset_right = 108.0
offset_bottom = 50.0
custom_minimum_size = Vector2( 0, 14 )

[node name="Dialogs" type="Control" parent="Graph"]
offset_left = 7.0
offset_top = -35.0
offset_right = 1899.0
offset_bottom = -11.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="Graph/Dialogs"]
visible = true
offset_left = 637.558
offset_top = 343.473
offset_right = 1318.56
offset_bottom = 724.473
window_title = "Guardar un Archivo"
filters = PackedStringArray( "*.mtalk ; Dialog files" )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AcceptDialog" type="AcceptDialog" parent="Graph/Dialogs"]
visible = true
offset_left = 372.657
offset_top = 425.413
offset_right = 561.657
offset_bottom = 531.413
size_flags_horizontal = 5
size_flags_vertical = 5
window_title = "Â¡Alerta!"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="connection_request" from="Graph" to="Graph" method="_on_GraphEdit_connection_request"]
[connection signal="delete_nodes_request" from="Graph" to="Graph" method="_on_GraphEdit_delete_nodes_request"]
[connection signal="disconnection_request" from="Graph" to="Graph" method="_on_GraphEdit_disconnection_request"]
[connection signal="popup_request" from="Graph" to="Graph" method="_on_GraphEdit_popup_request"]
[connection signal="id_pressed" from="Graph/PopupMenu" to="Graph" method="_on_PopupMenu_id_pressed"]
